# cameo-mcp-bridge

./: .gitignore  CHANGELOG.md  README.md  install.sh
.github/workflows/: ci.yml
docs/development/: build-and-live-validation.md
docs/plans/: 2026-04-12-semantic-mbse-major-release.md  2026-04-20-physical-architecture-competency-plan.md  cameo-ai-systems-engineer-autopilot-plan.md  cameo-bridge-stabilization-plan.md  relation-map-ui-introspection-plan.md
docs/releases/: 2026-04-12-semantic-mbse-major-release.md  2026-04-13-diagram-repair-hardening-patch-release.md  2026-04-13-zero-touch-automation-minor-release.md  2026-04-20-native-matrix-and-codex-plugin-patch-release.md  2026-05-05-autopilot-surface-and-relation-map-evidence-release.md
mcp-server/: pyproject.toml
mcp-server/cameo_mcp/: auto_remediation.py  client.py  methodology_workflows.py  proofing.py  rubric_workflows.py  server.py  verification.py  version_compat.py
mcp-server/cameo_mcp/methodology/: registry.py
mcp-server/scripts/: live_validate_596def1.py  live_validate_assignment_10a.py  live_validate_autopilot_route_surface.py  live_validate_bridge_surface.py  live_validate_flow_properties.py  live_validate_matrices.py  live_validate_relation_map_rendering.py  live_validate_ui_introspection.py
mcp-server/tests/: test_auto_remediation.py  test_client.py  test_methodology_registry.py  test_methodology_workflows.py  test_proofing.py  test_rubric_workflows.py  test_server.py  test_verification.py  test_version_compat.py
openhands-plugin/: plugin.yaml
plugin/: build.gradle  plugin.xml
(+70 files in other folders)
